# 2048-challenger

./: .gitmodules  2048.cpp  2048.py  2048lib.py  CheckMove.py  README.md  chromectrl.py  config.h.in  configure  configure.ac  ctrl.py  game.py  gamectrl.py  logic2048.py  q1.ipynb  solver.ipynb  test.py
old/: ai.py  game_board.py  solver.ipynb
