#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_CONFIG_MACRO_DIR([m4])

AC_PREREQ([2.71])
AC_INIT([2048 AI],[1.0],[https://github.com/dnx04/2048-challenger/issues],[2048-challenger],[https://github.com/dnx04/2048-challenger])
AC_CONFIG_SRCDIR([2048.cpp])
AC_CONFIG_HEADERS([config.h])

AC_LANG([C++])
AX_CXX_COMPILE_STDCXX_11([noext], [optional])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_CC
AC_PROG_MKDIR_P

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_TYPE_UINT16_T
AC_TYPE_UINT64_T

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
